@@ -1,4 +1,9 @@
 2011/09/29 (TS):
+ - Makefile.am:    added rules to Makefile.am to build + clean PDF
+ - lanIpBasic.tex: further work.
+ - lanIpBasic.h, lanIpBasicSetup.h: added comment that ethernet addresses
+                   are arrays of 6 octets
+2011/09/29 (TS):
  - added lanIpBasic.tex
 2011/07/21 (TS):
  - e1k_lldrv.c: BUGFIX - only first unit would be accepted because
